<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_close_blue"
        android:contentDescription="@string/cancel"
        android:background="@color/white"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/inputOutput"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputOutput"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/incomeButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/income"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/button_green"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/expenditureButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/expenditure"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/button_red"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/choseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_default"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/nameMenu"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameMenu"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/name"
                android:gravity="center"
                android:textSize="@dimen/text_size_default"
                android:maxLength="20"
                android:textColor="@color/textColor"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/valueMenu"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valueMenu"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/valueInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/value"
                android:gravity="center"
                android:textSize="@dimen/text_size_default"
                android:textColor="@color/textColor" />
        </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/text_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="€"
                android:textSize="@dimen/text_size_default"
                android:layout_marginRight="10dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/dateMenu"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateMenu"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textSize="@dimen/text_size_default"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:editable="false"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/timeMenu"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeMenu"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/timeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:textSize="@dimen/text_size_default"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:editable="false"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/noteMenu"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noteMenu"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="400">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/noteInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/note"
                android:gravity="center"
                android:textSize="@dimen/text_size_default"
                android:maxLength="400"
                android:textColor="@color/textColor" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/categoryMenu"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:theme="@style/spinnerStyle"
            android:divider="?android:attr/listDivider"
            android:showDividers="end"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/pictureMenu"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pictureMenu"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/makePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:background="@drawable/button_standard"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:drawableStart="@drawable/ic_insert_photo_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:background="@drawable/button_standard"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_delete_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_margin="10dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/centerView"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/previousButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/centerView"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/centerView"/>
    </RelativeLayout>

</RelativeLayout>