<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <TableLayout
        android:id="@+id/filledStateScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/overview"
                android:layout_span="2"
                android:textSize="@dimen/text_size_medium"
                style="@style/TextAppearance.MaterialComponents.Headline3"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/monthAndYearInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/monthAndYear"
                android:layout_span="2"
                android:textSize="@dimen/text_size_big"
                style="@style/TextAppearance.MaterialComponents.Headline6"

                android:editable="false"
                android:focusable="false"/>

        </TableRow>
        

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saldo"
                android:gravity="center"
                android:layout_span="2"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                style="@style/TextAppearance.MaterialComponents.Headline5"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/saldoThisMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/placeHolder"
                android:gravity="center"
                android:layout_span="2"
                android:textSize="@dimen/text_size_default"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/colorPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/incomeHome"
                android:textSize="@dimen/text_size_medium"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/expenditureHome"
                android:textSize="@dimen/text_size_medium"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/textColor"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/incomeThisMonth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/placeHolder"
                android:textSize="@dimen/text_size_default"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/green"/>

            <TextView
                android:id="@+id/expenditureThisMonth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/placeHolder"
                android:textSize="@dimen/text_size_default"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/red"/>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/shadow"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lastTransactions"
                android:gravity="center"
                android:layout_span="2"
                android:textSize="@dimen/text_size_medium"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/textColor"/>
        </TableRow>

        <TableRow
            android:id="@+id/transactionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >

            <ListView
                android:id="@+id/homeListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:dividerHeight="1dp"
                android:focusable="false"
                android:focusableInTouchMode="false">


            </ListView>


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/emptyStateScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/initialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center_horizontal"
            android:text="Erstelle eine Buchung"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/emptyListBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/empty_list_background"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>


</FrameLayout>